--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,6 +1,7 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+# Environment Variables for the guest VM
 $set_environment_variables = <<SCRIPT
 tee "/etc/profile.d/vp-app-env_variables.sh" > "/dev/null" <<EOF
 # Maven environment variables
@@ -23,16 +24,18 @@ Vagrant.configure(2) do |config|
 	end
 
 	# Provision
-	config.vm.provision "shell" , path: "utils_install.sh", privileged:true
+	config.vm.provision "shell" , path: "utils.sh", privileged:true
+	config.vm.provision "shell" , path: "java.sh", privileged:true
 	config.vm.provision "shell" , path: "mongodb.sh", privileged:true
 	config.vm.provision "shell" , path: "maven.sh", privileged:true
 	config.vm.provision "shell" , path: "zookeper.sh", privileged:true
   
 	# Set environment variables
 	config.vm.provision "shell", inline: $set_environment_variables, run: "always"
+	config.vm.provision "shell", inline: "source /etc/profile.d/vp-app-env_variables", run: "always"
   
 	# Set timeout and ssh insert keys
-	config.vm.boot_timeout = 900000
+	config.vm.boot_timeout = 500000
 	config.ssh.insert_key = false
 end
 
